# str_to_enum_derive

./: CHANGELOG.MD  Cargo.toml  README.MD
examples/: basic_fxhasher.rs
src/: lib.rs
